--- a/thesis.bib
+++ b/thesis.bib
@@ -2785,7 +2785,7 @@ abstract = "Swarm robotics is concerned with the decentralised coordination of m
 }
 
 @INPROCEEDINGS{SOM:12,
-  author =	 {D. Salda\~na and D. Ovalle and A. Montoya},
+  author =	 {D. Saldana and D. Ovalle and A. Montoya},
   booktitle =	 {Informatica (CLEI), 2012 XXXVIII Conferencia
                   Latinoamericana En},
   title =	 {Improved algorithm for perimeter tracking in robotic
@@ -3722,7 +3722,7 @@ month={Oct},
 }
 
 @INPROCEEDINGS{DHMRZ:06,
-author={Y. s. Dai and M. Hinchey and M. Madhusoodan and J. L. Rash and X. Zou},
+author={Y. Dai and M. Hinchey and M. Madhusoodan and J. Rash and X. Zou},
 booktitle={2006 2nd IEEE International Symposium on Dependable, Autonomic and Secure Computing},
 title={A Prototype Model for Self-Healing and Self-Reproduction In Swarm Robotics System},
 year={2006},
